update dockerfile and Taskfile
